k8s/cointracker-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: cointracker-api-coinlist-node
spec:
  type: NodePort
  selector:
    app: cointracker-api-coinlist
  ports:
    - port: 80
      targetPort: 80
